# indiefuture_agent_cli

./: .env.example  .env.template  .gitignore  CLAUDE.md  Cargo.toml  README.md  agents.json  design_spec.md  subtask_execution_spec_plan.md
src/: agent_engine.rs  error.rs  lib.rs  main.rs  memory.rs  utils.rs
src _old/: error.rs  lib.rs  main.rs  utils.rs
src _old/ai/: prompt.rs
src _old/cli/: commands.rs  interface.rs
src _old/codebase/: parser.rs  scanner.rs
src _old/storage/: sled_store.rs
src _old/task/: decomposition.rs  executor.rs  mod.rs
src _old/tools/: bash_tool.rs  documentation_tool.rs  task_tool.rs
src/ai/: claude.rs  mod.rs  openai.rs  prompt.rs
src/cli/: commands.rs  interface.rs  mod.rs
src/codebase/: mod.rs  scanner.rs
src/config/: settings.rs
src/memory/: vector_store.rs
src/memory_old/: mod.rs  short_term.rs  working_context.rs
src/storage/: mod.rs
src/subtasks/: mod.rs  subtask.rs  tasks.rs
src/subtasks/schemas/: task_functions.json
src/task/: decomposition.rs  execution.rs  executor.rs  mod.rs  queue_manager.rs  subtask.rs
src/tools/: code_modification_tool.rs  code_search_tool.rs  mod.rs  task_tool.rs
src_old/codebase/: mod.rs  parser.rs
src_old/task/: subtask.rs
