[package]
name = "indiefuture_cli"
version = "0.1.0"
edition = "2021"
description = "AI-powered CLI agent for task execution"

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.49"
env_logger = "0.10.0"
log = "0.4.18"
chrono = { version = "0.4.39", features = ["serde"] }
async-trait = "0.1.86"

# CLI interface
cliclack = "0.3.5"
console = "0.15.10"
ctrlc = "3.4.1"
dialoguer = "0.11.0"
indicatif = "0.17.8"
colored = "2.0.4"

# HTTP and APIs
reqwest = { version = "0.12.12", features = ["json", "stream"] }
futures = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Storage
qdrant-client = "1.7.0"
sled = "0.34.7"

# We'll use API-based embeddings instead of rust-bert to avoid PyTorch dependency
# For a production system, consider installing PyTorch and using rust-bert

# Filesystem
walkdir = "2.3"
ignore = "0.4"
regex = "1.10.3"
glob = "0.3.1"

# Environment
dotenvy = "0.15.7"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
dirs = "5.0.1"

# Legacy dependencies
degen-sql = "0.1.12"
ethers = "2.0.10"
pathdiff = "0.2.3"
